--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Axis/icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1e293b" />
     <meta name="description" content="Aplicativo completo de controle financeiro pessoal" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/Axis/manifest.json" />
     <title>Ultimate Personal Finance App</title>
     <meta property="og:image" content="https://bolt.new/static/og_default.png">
     <meta name="twitter:card" content="summary_large_image">
